# ringos-ng

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  HelloWorld.md  README.md
.github/: copilot-instructions.md
arch/arm64/: CMakeLists.txt  arm64_initial_user_runtime_platform.cpp  arm64_initial_user_runtime_platform.h  boot.S  console.cpp  debug.cpp  entry.cpp  linker.ld  machine.cpp  pl011.cpp  pl011.h  user_runtime.S  user_runtime.cpp  user_task.cpp
arch/arm64/machines/: qemu_arm64_virt_boot.S  qemu_arm64_virt_machine.cpp  qemu_arm64_virt_machine.h
arch/x64/: CMakeLists.txt  boot.S  debug.cpp  entry.cpp  linker.ld  machine.cpp  serial.cpp  serial.h  test_app_pe64.S  test_app_pe64.cpp  user_runtime.S  user_runtime.cpp  user_task.S  user_task.cpp  x64_initial_user_runtime_platform.cpp  x64_initial_user_runtime_platform.h
cmake/: arm64_test_app_image.cmake  compute_toolchain_release.cmake  ringos_installed_toolchain.cmake  ringos_sdk_sysroot.cmake  ringos_toolchain_common.cmake  ringos_toolchain_identity.cmake  x64_test_app_image.cmake
debug/: Dockerfile  README.md  gdb-stub.sh
docker/: Dockerfile
docs/: architecture-overview.md  ci-and-testing.md  cleanup-gpt.md  cleanup-opus.md  cleanup-phases.md  contributing.md  first-driver.md  milestone-one-execution-plan.md  shm_communication.md  stage8-clang-bringup.md  system-interoperability.md  system_interoperability.md  user-space-abi.md
emulator/: CMakeLists.txt
emulator/win32/: CMakeLists.txt  generate_win32_emulation.py  x64_win32_emulation.cpp
emulator/win32/definitions/: kernel32.yaml
emulator/x64/: CMakeLists.txt  x64_alu_instructions.cpp  x64_control_flow_instructions.cpp  x64_data_movement_instructions.cpp  x64_decoder.cpp  x64_decoder.h  x64_emulator.cpp  x64_execution_context.cpp  x64_execution_context.h  x64_instruction.h  x64_instruction_dispatch.cpp  x64_instruction_dispatch.h  x64_instruction_handlers.h  x64_interpreter.cpp  x64_interpreter.h  x64_pe64_image.cpp  x64_simd_instructions.cpp  x64_stack_instructions.cpp  x64_system_instructions.cpp
kernel/: CMakeLists.txt  address_space.cpp  address_space.h  arch_machine.h  boot_info.h  channel.cpp  console.cpp  debug.cpp  device_memory_object.cpp  device_memory_type.h  format.cpp  handle.h  kernel.cpp  kernel_object.cpp  kernel_object.h  kernel_object_pool.h  kernel_object_pool.inl  machine.cpp  memory.cpp  panic.cpp  process.cpp  process.h  rpc.cpp  rpc.h  shared_memory_object.cpp  thread.cpp  thread.h  user_runtime.cpp  user_runtime.h  user_runtime_types.cpp  user_runtime_types.h  user_space.cpp  user_space.h
kernel/devices/: console.h
kernel/include/: arch_user_runtime.h  arch_user_task.h  boot_info.h  channel.h  console.h  debug.h  device_memory_object.h  format.h  kernel.h  kernel_object.h  kernel_object_pool.h  kernel_object_pool.inl  machine.h  memory.h  panic.h  process.h  shared_memory_object.h  stage1_kernel.h  thread.h  user_abi_layouts.h  user_runtime.h  user_runtime_types.h  user_space.h
kernel/include/devices/: console.h
kernel/klibc/: string.cpp  string.h
kernel/toolchains/: arm64.cmake  common.cmake  x64.cmake
scripts/: build-bootstrap-hosted-c.sh  build-bootstrap-hosted-cpp.sh  build-clang-toolchain.sh  check-enum-style.sh  debug-arm64.sh  debug-x64.sh  docker-build-toolchain-local.bat  docker-run-os-arm64.bat  docker-run-os-x64.bat  docker-test-arm64.bat  docker-test-x64.bat  run-arm64.sh  run-x64.sh  test-debug-launch-arm64.sh  test-debug-launch-x64.sh  test-semihost-arm64.sh  test-semihost-x64.sh  test-smoke-arm64-ansi-c.sh  test-smoke-arm64-native.sh  test-smoke-arm64-x64-emulator.sh  test-smoke-arm64.sh  test-smoke-x64-ansi-c.sh  test-smoke-x64.sh
tests/: build-tests.sh  check-enum-style.sh  docker-run-sample-test.bat  docker-test-console-service-write-arm64-native.bat  docker-test-console-service-write-arm64-x64-emulator.bat  docker-test-console-service-write-x64-native.bat  docker-test-hello-world-arm64-native.bat  docker-test-hello-world-arm64-x64-emulator.bat  docker-test-hello-world-cpp-arm64-native.bat  docker-test-hello-world-cpp-arm64-x64-emulator.bat  docker-test-hello-world-cpp-x64-native.bat  docker-test-hello-world-x64-native.bat  download-latest-sdk.sh  download-latest-toolchain.sh  test-debug-launch-arm64.sh  test-debug-launch-x64.sh  test-sample-console-service-write-arm64-native.sh  test-sample-console-service-write-arm64-x64-emulator.sh  (+13 more)
user/crt/: CMakeLists.txt  entry.c
user/crt/src/: crt0.c
user/libc/: CMakeLists.txt  stdio.c
user/libc/include/: errno.h  stdint.h  stdio.h  stdlib.h  string.h
user/libc/src/: exit.cpp  puts.cpp  stdio.cpp  stdlib.cpp  string.cpp
user/samples/console_service_write/: CMakeLists.txt  README.md  console_service_write.c  docker-test-console-service-write.bat  test-console-service-write.sh
user/samples/hello_world/: CMakeLists.txt  README.md  docker-test-hello-world-arm64.bat  docker-test-hello-world-x64-on-arm64.bat  docker-test-hello-world-x64.bat  hello_world.c  test-hello-world-arm64.sh  test-hello-world-x64-on-arm64.sh  test-hello-world-x64.sh
user/samples/hello_world_cpp/: CMakeLists.txt  README.md  docker-test-hello-world-cpp-arm64.bat  docker-test-hello-world-cpp-x64-on-arm64.bat  docker-test-hello-world-cpp-x64.bat  hello_world.cpp  test-hello-world-cpp-arm64.sh  test-hello-world-cpp-x64-on-arm64.sh  test-hello-world-cpp-x64.sh
user/sdk/: CMakeLists.txt  build-sdk.sh  docker-build-sdk.bat
user/sdk/arm64/: ringos_syscall.S
user/sdk/include/ringos/: console.h  debug.h  handle.h  process.h  rpc.h  sdk.h  status.h  syscalls.h  types.h
user/sdk/src/: ringos_console.c  ringos_console.cpp  ringos_debug.c  ringos_debug.cpp  ringos_process.c  ringos_process.cpp  ringos_rpc.c  ringos_rpc.cpp
user/sdk/x64/: ringos_syscall.S
win32/: CMakeLists.txt  pe_image.cpp  x64_pe64_image.cpp  x64_win32_emulation.cpp  x64_windows_compat.cpp
win32/definitions/: kernel32.yaml
win32/include/: pe_image.h  x64_pe64_image.h  x64_win32_emulation.h  x64_windows_compat.h
win32/tests/: CMakeLists.txt  test_app_pe64.S  x64_win32_loader_tests.cpp
(+98 files in other folders)
